...
            "value" : "Alle"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Todo"
          }
        },
        "fr" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tous"
...
            "state" : "translated",
            "value" : "看板废纸篓为空"
          }
        }
      }
    },
    "Boards" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Boards"
...
            "state" : "translated",
            "value" : "来自%@"
          }
        }
      }
    },
    "Full" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Vollständig"
...
